{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 12,
  "lineage": "6d1a1491-ec2c-6d94-8ca6-85360199719e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ecomm_pub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/networkInterfaces/ecomm_web_nic",
            "internal_domain_name_suffix": "5yiyhvob4ifedd0kbstsve5x4b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/publicIPAddresses/ecomm_web_pip",
                "subnet_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_web_subnet"
              }
            ],
            "location": "eastus",
            "name": "ecomm_web_nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "srikanth_group"
          },
          "dependencies": [
            "azurerm_public_ip.ecomm_pip",
            "azurerm_resource_group.ecomm_rg",
            "azurerm_subnet.ecomm_pub_sn",
            "azurerm_virtual_network.ecomm_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ecomm_pub_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/networkSecurityGroups/ecomm_web_nsg",
            "location": "eastus",
            "name": "ecomm_web_nsg",
            "resource_group_name": "srikanth_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ecomm_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ecomm_pvt_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/networkSecurityGroups/ecomm_database_nsg",
            "location": "eastus",
            "name": "ecomm_database_nsg",
            "resource_group_name": "srikanth_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "postgres",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ecomm_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ecomm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/publicIPAddresses/ecomm_web_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.103.24",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ecomm_web_pip",
            "resource_group_name": "srikanth_group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ecomm_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ecomm_pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_web_subnet",
            "name": "ecomm_web_subnet",
            "resource_group_name": "srikanth_group",
            "virtual_network_name": "ecomm_network"
          },
          "dependencies": [
            "azurerm_resource_group.ecomm_rg",
            "azurerm_virtual_network.ecomm_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ecomm_pvt_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_database_subnet",
            "name": "ecomm_database_subnet",
            "resource_group_name": "srikanth_group",
            "virtual_network_name": "ecomm_network"
          },
          "dependencies": [
            "azurerm_resource_group.ecomm_rg",
            "azurerm_virtual_network.ecomm_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ecomm_pub_nsg_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_web_subnet",
            "network_security_group_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/networkSecurityGroups/ecomm_web_nsg",
            "subnet_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_web_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ecomm_pub_nsg",
            "azurerm_resource_group.ecomm_rg",
            "azurerm_subnet.ecomm_pub_sn",
            "azurerm_virtual_network.ecomm_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ecomm_pvt_nsg_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_database_subnet",
            "network_security_group_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/networkSecurityGroups/ecomm_database_nsg",
            "subnet_id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network/subnets/ecomm_database_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ecomm_pvt_nsg",
            "azurerm_resource_group.ecomm_rg",
            "azurerm_subnet.ecomm_pvt_sn",
            "azurerm_virtual_network.ecomm_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ecomm_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d58311fe-f2c1-410a-8f4a-0ca72a93f7f1",
            "id": "/subscriptions/89bd3a1d-81eb-4f09-94ad-f3075f2e18e8/resourceGroups/srikanth_group/providers/Microsoft.Network/virtualNetworks/ecomm_network",
            "location": "eastus",
            "name": "ecomm_network",
            "resource_group_name": "srikanth_group",
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ecomm_rg"
          ]
        }
      ]
    }
  ]
}